# fivem

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .ignore  .travis.yml  CitiMono.csproj  DEPS  Gruntfile.js  LICENSE  README.md  SECURITY.md  SECURITY_AUDIT_FINAL.md  SECURITY_AUDIT_REPORT.md  appveyor.yml  build_sln.bat  docs.txt  fxd.cmd  fxd.ps1  generate_security_report.py  json.lua  launcher.def  package-lock.json  package.json  prebuild.cmd  prebuild_libnode.cmd  prebuild_misc.cmd  prebuild_natives.cmd  prebuild_premake.cmd  prebuild_premake.ps1  prebuild_udis86.cmd  premake5.lua  tsconfig.json  typings.json
.github/: PULL_REQUEST_TEMPLATE.md
ClrTests/: BaseScriptTests.cs  ClrTests.csproj  CoreStubs.cs  NativeApiStub.cs
Test/: BaseScriptTests.cs  CoreStubs.cs  runTests.ps1
anticheat-admin/: README.md  package-lock.json  package.json
anticheat-resource/: README.md  fxmanifest.lua
code/: .clang-format  .editorconfig  .gitignore  .snyk  CitiMono.csproj  Gruntfile.js  LICENSE  MENTIONS.txt  README.md  Rockerfile  package.json  prebuild_luajit.cmd  prebuild_misc.cmd  prebuild_premake.ps1  prebuild_udis86.cmd  premake5.lua  premake5_builds.lua  premake5_defines.lua  premake5_layout.lua  update_locale.cmd
ext/jexl-eval/: .gitignore  Cargo.toml  build.cmd  build.rs
ext/jexl-eval/src/: lib.rs
ext/wasm-runtime/bindings/core/: Cargo.toml  readme.md
ext/wasm-runtime/bindings/core/src/: events.rs  exports.rs  invoker.rs  lib.rs  ref_funcs.rs  runtime.rs  types.rs
ext/wasm-runtime/rt-types/: Cargo.toml
ext/wasm-runtime/rt-types/src/: lib.rs
(+8636 files in other folders)
