[package]
name = "cfx_jexl_eval"
version = "0.1.0"
authors = ["blattersturm <peachypies@protonmail.ch>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
jexl-eval = "0.1.7-alpha"
serde_json = "1.0"
libc = "0.2"

[patch.crates-io]
jexl-eval = { path = 'deps/jexl-rs/jexl-eval/' }

[build-dependencies]
cbindgen = "0.15.0"

[profile.release]
opt-level = "s"
