[package]
name = "cfx-wasm-rt-types"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Types used by CitizenFX WASM Runtime"

[features]
default = ["in-module"]
in-module = ["rmp-serde", "serde"]

[dependencies]
rmp-serde = { version = "0.15.4", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
