[package]
name = "fivem-core"
version = "0.1.0"
authors = ["ZOTTCE <zottce@gmail.com>"]
edition = "2018"

[features]
default = ["full"]
types = []
full = ["types", "futures", "serde"]

[dependencies]
rmp-serde = "0.15.4"
futures = { version = "0.3.14", features = ["executor"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_bytes = "0.11.5"
rustc-hash = "1.1.0"
async-stream = "0.3.1"
